--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-ui-bootstrap": "^2.5.6",
+    "angular-ui-carousel": "^0.1.10",
+    "bootstrap": "^4.1.3",
+    "bootstrap-material-design": "^4.1.1",
+    "bootstrap.min.js": "^3.3.5",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
+    "jquery": "^2.1.4",
+    "ngx-bootstrap": "^3.0.1",
+    "popper.js": "^1.14.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
